dev dependencies will not install - do it explicitly

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Frank J Kocina",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "4.15.2"
+    "express": "^4.15.2"
   },
   "devDependencies": {
-    "nodemon": "1.11.0"
+    "nodemon": "^1.11.0"
   }
 }
