--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Frank J Kocina",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "cors": "2.8.3"
   },
   "devDependencies": {
     "nodemon": "1.11.0"
